<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Screen</string>
    <string name="interval_label">Check frequency</string>
    <string name="interval_0_label">Low</string>
    <string name="interval_1_label">Medium</string>
    <string name="interval_2_label">High</string>
    <string name="sensitivity_label">Sensitivity</string>
    <string name="status_online_label">On</string>
    <string name="status_offline_label">Off</string>
    <string name="status_always_label">Always</string>
    <string name="status_title_label">Smart Screen</string>

    <string name="action_settings">Always on APP</string>
    <string name="action_load">Loading ...</string>
    <string name="mark_all">Mark all</string>
    <string name="unmark_all">Unmark all</string>
    <string name="items">Items selected:</string>

    <!-- Configuration values, do not translate -->
    <string name="onoff_default">off</string>
    <string name="interval_0_default">6</string>
    <string name="interval_1_default">4</string>
    <string name="interval_2_default">2</string>
    <string name="sensitivity_0_default">3</string>
    <string name="sensitivity_1_default">0.5</string>
    <string name="sensitivity_2_default">0.3</string>

</resources>